border fix for inputs on mobile

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -127,6 +127,7 @@
                     background: transparent;
                     position: relative;
                     z-index: 1;
+                    border-radius: 0;
                     -webkit-appearance: none;
 
                     &:focus {
@@ -147,6 +148,7 @@
                     position: relative;
                     z-index: 1;
                     -webkit-appearance: none;
+                    border-radius: 0;
                     &:focus {
                         outline: none;
                     }
